@@ -1,5 +1,13 @@
 2010-07-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
+	Add support for new performance counters.
+
+	* lib/include/svp/perf.h: New counters for TT and FT occupancy.
+	* lib/src/perf.h: Name the new counters. Also support computer
+	columns.
+
+2010-07-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
 	Fix bug in `spr'.
 
 	* tools/lib/slc/lower/seq.py (TFun_2_CFun): Fix support for thread
